added login/register page page

--- a/Home.html
+++ b/Home.html
@@ -5,16 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"> 
-    <title>IT Project</title>
+    <title>Home</title>
 </head>
 <body>
     <div class="topbar">
         <ul>
             <li>
-                Contact Us
-            </li>
-            <li>
-                About Us
+                Login
             </li>
         </ul>
     </div>
