--- a/Login.html
+++ b/Login.html
@@ -16,31 +16,35 @@
         </ul>
     </div>
     <div class="loginAndRegister">
-        <h2> Login Here </h2>
-        <div class="Login">
-            <div class="loginLabel">Login</div>
-            <div class="Username">
-                <label>Username</label>
-                <input type="text" name="username" id="username" placeholder="Username">
+        <div class="loginbox">
+            <h2> Login Here </h2>
+            <div class="Login">
+                <div class="loginLabel">Login</div>
+                <div class="Username">
+                    <label>Username</label>
+                    <input type="text" name="username" id="username" placeholder="Username">
+                </div>
+                <div class="Password">
+                    <label>Password</label>
+                    <input type="text" name="password" id="password" placeholder="Password">
+                </div>
+                <input type="button" name="button" id="button" value="Login"></button>
             </div>
-            <div class="Password">
-                <label>Password</label>
-                <input type="text" name="password" id="password" placeholder="Password">
-            </div>
-            <input type="button" name="button" id="button" value="Login"></button>
         </div>
-        <h2> Register Here </h2>
-        <div class="Register">
-            <div class="registerLabel">Register</div>
-            <div class="Username">
-                <label>Username</label>
-                <input type="text" name="username" id="username" placeholder="Username">
+        <div class="registerbox">
+            <h2> Register Here </h2>
+            <div class="Register">
+                <div class="registerLabel">Register</div>
+                <div class="Username">
+                    <label>Username</label>
+                    <input type="text" name="username" id="username" placeholder="Username">
+                </div>
+                <div class="Password">
+                    <label>Password</label>
+                    <input type="text" name="password" id="password" placeholder="Password">
+                </div>
+                <input type="button" name="button" id="button" value="Create Account"></button>
             </div>
-            <div class="Password">
-                <label>Password</label>
-                <input type="text" name="password" id="password" placeholder="Password">
-            </div>
-            <input type="button" name="button" id="button" value="Create Account"></button>
         </div>
     </div>
 </body>
