fixed box size on login page

--- a/Login.html
+++ b/Login.html
@@ -43,6 +43,10 @@
                     <label>Password</label>
                     <input type="text" name="password" id="password" placeholder="Password">
                 </div>
+                <div class="email">
+                    <label>Email</label>
+                    <input type="text" name="password" id="password" placeholder="Password">
+                </div>
                 <input type="button" name="button" id="button" value="Create Account"></button>
             </div>
         </div>
