added new login, signup, reset pass and forgot pass pages

--- a/Login.html
+++ b/Login.html
@@ -15,41 +15,38 @@
             </li>
         </ul>
     </div>
-    <div class="loginAndRegister">
-        <div class="loginbox">
-            <h2> Login Here </h2>
-            <div class="Login">
-                <div class="loginLabel">Login</div>
-                <div class="Username">
-                    <label>Username</label>
-                    <input type="text" name="username" id="username" placeholder="Username">
-                </div>
-                <div class="Password">
-                    <label>Password</label>
-                    <input type="text" name="password" id="password" placeholder="Password">
-                </div>
-                <input type="button" name="button" id="button" value="Login"></button>
+
+    <div class="loginbox">
+        <div class="Login">
+            <div class="loginLabel">Sign In</div>
+            <div class="Username">
+                <label>Username</label>
+                <input type="text" name="username" id="username" placeholder="Enter username">
             </div>
-        </div>
-        <div class="registerbox">
-            <h2> Register Here </h2>
-            <div class="Register">
-                <div class="registerLabel">Register</div>
-                <div class="Username">
-                    <label>Username</label>
-                    <input type="text" name="username" id="username" placeholder="Username">
-                </div>
-                <div class="Password">
-                    <label>Password</label>
-                    <input type="text" name="password" id="password" placeholder="Password">
-                </div>
-                <div class="email">
-                    <label>Email</label>
-                    <input type="text" name="password" id="password" placeholder="Password">
-                </div>
-                <input type="button" name="button" id="button" value="Create Account"></button>
+            <div class="Password">
+                <label>Password</label>
+                <input type="text" name="password" id="password" placeholder="Enter password">
+            </div>
+            <div class="Remember"> 
+                <input type="checkbox"> 
+                <label>Remember Me</label>
+            </div>
+            <input type="button" name="button" id="button" value="Login"></button>
+            <a href="Forgotpass.html">Forgot password?</a>
+
+            <hr>
+            <label>or</label>
+
+            <br>
+            <label>Don't have an account?</label>
+            
+            <input type="button" name="button" id="signupbutton" value="Sign Up"></button>
+            
+            <div>
+
             </div>
         </div>
     </div>
+
 </body>
 </html>
