minor edits to class names

--- a/Home.html
+++ b/Home.html
@@ -15,17 +15,21 @@
             </li>
         </ul>
     </div>
-    <div class="banner">insert image here</div>
     <div class="nav">
         <ul>
             <li>
                 Home
             </li>
             <li>
-                Items
+                Books
             </li>
+            <input type="text", placeholder="Search for book">
         </ul>
     </div>
+    <div class="banner">insert image here</div>
     <div class="main">hello</div>
 </body>
+<footer>
+    <a href="">Contact Us</a> 
+</footer>
 </html>
