--- a/Resetpass.html
+++ b/Resetpass.html
@@ -18,7 +18,7 @@
 
             <div class="Confirmpassword">
                 <label>Confirm password</label>
-                <input type="text" name="confpass" id="confpass" placeholder="Re-enter password">
+                <input type="text" name="confPassword" id="confPassword" placeholder="Re-enter password">
             </div>
 
             <input type="button" name="button" id="button" value="Reset Password"></button>
