--- a/Signup.html
+++ b/Signup.html
@@ -11,6 +11,10 @@
     <div class="registerbox">
         <div class="Register">
             <div class="registerLabel">Sign Up</div>
+            <div class="Email">
+                <label>Email</label>
+                <input type="text" name="email" id="email" placeholder="Enter email">
+            </div>
             <div class="Username">
                 <label>Username</label>
                 <input type="text" name="username" id="username" placeholder="Enter username">
@@ -19,10 +23,11 @@
                 <label>Password</label>
                 <input type="text" name="password" id="password" placeholder="Enter password">
             </div>
-            <div class="Email">
-                <label>Email</label>
-                <input type="text" name="password" id="password" placeholder="Enter email">
+            <div class="ConfirmPassword">
+                <label>Password</label>
+                <input type="text" name="confPassword" id="confPassword" placeholder="Re-enter password">
             </div>
+            
             <input type="button" name="button" id="button" value="Sign Up"></button>
         </div>
     </div>
