--- a/Login.html
+++ b/Login.html
@@ -40,7 +40,7 @@
             <br>
             <label>Don't have an account?</label>
             
-            <input type="button" name="button" id="signupbutton" value="Sign Up"></button>
+            <input type="button" name="button" id="button" value="Sign Up"></button>
             
             <div>
 
