stylesheet for signup page

--- a/Signup.html
+++ b/Signup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="signupStyle.css"> 
 </head>
 <body>
     <div class="registerbox">
@@ -24,11 +24,11 @@
                 <input type="text" name="password" id="password" placeholder="Enter password">
             </div>
             <div class="ConfirmPassword">
-                <label>Password</label>
+                <label>Confirm password</label>
                 <input type="text" name="confPassword" id="confPassword" placeholder="Re-enter password">
             </div>
             
-            <input type="button" name="button" id="button" value="Sign Up"></button>
+            <input type="button" name="signUpButton" id="button" value="Sign Up"></button>
         </div>
     </div>
 </body>
