reset pass style sheet

--- a/Resetpass.html
+++ b/Resetpass.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="resetPassStyle.css"> 
 </head>
 <body>
-    <div class="resetpassbox">
+    <div class="resetPassBox">
         <div class="Resetpassword">
             <div class="resetPassLabel">Reset Password</div>
+
             <div class="Newpassword">
                 <label>New password</label>
                 <input type="text" name="newpass" id="newpass" placeholder="Enter new password">
@@ -21,7 +22,7 @@
                 <input type="text" name="confPassword" id="confPassword" placeholder="Re-enter password">
             </div>
 
-            <input type="button" name="button" id="button" value="Reset Password"></button>
+            <input type="button" name="resetPassButton" id="button" value="Reset Password"></button>
         </div>
     </div>
 </body>
