--- a/Forgotpass.html
+++ b/Forgotpass.html
@@ -5,18 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="forgotPassStyle.css"> 
 </head>
 <body>
-    <div class="forgotpassbox">
-        <div class="Forgotpassword">
+    <div class="forgotPassBox">
+        <div class="ForgotPassword">
             <div class="forgotLabel">Forgot Password</div>
             <div class="Email">
                 <label>Email</label>
                 <input type="text" name="email" id="email" placeholder="Enter email">
             </div>
-            <p>Text with instructions</p>
-            <input type="button" name="button" id="button" value="Submit"></button>
+
+            <div class="instructions">
+                <p>Enter the email your account is signed up with to receive a reset password link</p>
+            </div>
+
+            <input type="button" name="forgotPassButton" id="button" value="Submit"></button>
         </div>
     </div>
 </body>
