added a back button on sign up page

--- a/Signup.html
+++ b/Signup.html
@@ -27,8 +27,11 @@
                 <label>Confirm password</label>
                 <input type="text" name="confPassword" id="confPassword" placeholder="Re-enter password">
             </div>
-            
-            <input type="button" name="signUpButton" id="button" value="Sign Up"></button>
+            <div class="buttons">
+                <input type="button" name="backButton" id="button" value="back" onclick="window.location.href='Login.html'"></button>
+                <input type="button" name="signUpButton" id="button" value="Sign Up"></button>
+            </div>
+
         </div>
     </div>
 </body>
