sign up button on login page goes to sign up page

--- a/Login.html
+++ b/Login.html
@@ -38,7 +38,7 @@
             </div>
 
             
-            <input type="button" name="button" id="button" value="Sign Up"></button>
+            <input type="button" name="button" id="button" value="Sign Up" onclick="window.location.href='Signup.html'"></button>
             
             <div>
 
