--- a/Login.html
+++ b/Login.html
@@ -18,10 +18,10 @@
             </div>
             <div class="Password">
                 <label>Password</label>
-                <input type="text" name="password" id="password" placeholder="Enter password">
+                <input type="password" name="password" id="password" placeholder="Enter password">
             </div>
             <div class="Remember"> 
-                <input type="checkbox"> 
+                <input type="checkbox">
                 <label>Remember Me</label>
             </div>
             <input type="button" name="button" id="button" value="Login"></button>
