--- a/client/Login.html
+++ b/client/Login.html
@@ -12,9 +12,10 @@
     <div class="loginbox">
         <div class="Login">
             <div class="loginLabel">Sign In</div>
+            <div class="errorMessage">Incorrect username/password combination.</div>
             <div class="Username">
                 <label>Username</label>
-                <input type="text" name="username" id="username" placeholder="Enter username">
+                <input type="text" name="username" id="username" placeholder="Enter username" autofocus>
             </div>
             <div class="Password">
                 <label>Password</label>
