--- a/client/Signup.html
+++ b/client/Signup.html
@@ -13,7 +13,7 @@
             <h1>Sign Up</h1>
             <div class="Email">
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" placeholder="Enter email" required>
+                <input type="email" name="email" id="email" placeholder="Enter email" autofocus required>
             </div>
             <div class="Username">
                 <label for="username">Username</label>
