input error color box

--- a/client/Login.html
+++ b/client/Login.html
@@ -12,7 +12,7 @@
     <div class="loginbox">
         <div class="Login">
             <div class="loginLabel">Sign In</div>
-            <div class="errorMessage">Incorrect username/password combination.</div>
+            <div class="errorMessage correctComb">Incorrect username/password combination.</div>
             <div class="Username">
                 <label>Username</label>
                 <input type="text" name="username" id="username" placeholder="Enter username" autofocus>
