forgot password page redesign

--- a/client/Login_1.html
+++ b/client/Login_1.html
@@ -34,7 +34,7 @@
                 <input type="button" class="formButton" id="loginButton" value="Login">
             </div>
             <div class="linkContainer">
-                <a href="Forgotpass.html" id="forgotPasswordLink">Forgot password?</a>
+                <a href="ForgotPass.html" id="forgotPasswordLink">Forgot password?</a>
             </div>
 
             <div class="switchForm">
