switch forms functionality

--- a/client/Login_1.html
+++ b/client/Login_1.html
@@ -40,7 +40,7 @@
             <div class="switchForm">
                 <hr>
                 <p>Don't have an account?</p>
-                <input type="button" class="formButton" value="Sign Up">
+                <input type="button" class="formButton switchToSignup" value="Sign Up">
             </div>
         </form>
 
@@ -76,7 +76,7 @@
             <div class="switchForm">
                 <hr>
                 <p>Already have an account?</p>
-                <input type="button" class="formButton" value="Login">
+                <input type="button" class="formButton switchToLogin" value="Login">
             </div>
         </form>
     </div>
