--- a/client/AddBook.html
+++ b/client/AddBook.html
@@ -13,32 +13,32 @@
         <div class="BookInfoLabel">Book Information</div>
         <div class="BookNameAndCategory">
             <div class="Labels">
-                <div class="BookName">book Name</div>
-                <div class="BookCategory">Category</div>
+                <div class="Label">book Name</div>
+                <div class="Label">Category</div>
             </div>
             <div class="Inputs">
-                <input type="text" name="BookName" id="BookName" placeholder="Enter the book's name here">
-                <input type="text" name="BookCategory" id="BookCategory" placeholder="Enter the book's category here">
+                <input type="text" name="BookName" id="input" placeholder="Enter the book's name here">
+                <input type="text" name="BookCategory" id="input" placeholder="Enter the book's category here">
             </div>
         </div>
         <div class="BookAuthorAndISBN">
             <div class="Labels">
-                <div class="BookAuthor">Author</div>
-                <div class="BookISBN">ISBN</div>
+                <div class="Label">Author</div>
+                <div class="Label">ISBN</div>
                 
             </div>
             <div class="Inputs">
-                <input type="text" name="BookAuthor" id="BookAuthor" placeholder="Enter the book's author here">
-                <input type="text" name="BookISBN" id="BookISBN" placeholder="Enter the book's ISBN here">
+                <input type="text" name="BookAuthor" id="input" placeholder="Enter the book's author here">
+                <input type="text" name="BookISBN" id="input" placeholder="Enter the book's ISBN here">
             </div>
         </div>
         <div class="BookPriceAndCover">
             <div class="Labels">
-                <div class="BookPrice">Price</div>
-                <div class="BookCover">Cover</div>
+                <div class="Label">Price</div>
+                <div class="Label">Cover</div>
             </div>
             <div class="Inputs">
-                <input type="text" name="BookPrice" id="BookPrice" placeholder="Enter the book's Price here">
+                <input type="text" name="BookPrice" id="input" placeholder="Enter the book's Price here">
                 <div class="AddCoverContainer">
                     <input type="button" name="button" id="button" value="Add Cover">
                     <div class="CoverText">test</div>
@@ -46,6 +46,8 @@
             </div>
         </div>
     </div>
+    <div class="submit">
+        <input type="button" class="submitButton" name="submitButton" id="submitButton" value="Submit">
     </div>
 </body>
 </html>
