--- a/client/Home.html
+++ b/client/Home.html
@@ -9,20 +9,51 @@
 </head>
 <body>
     <div class="nav">
-        <input type="button" name="homeButton" id="homeButton" value="Home" onclick="window.location.href='Home.html'">
-        <input type="button" name="booksButton" id="booksButton" value="Books" onclick="window.location.href='Books.html'">
-        <input type="text" name="searchBox" id="searchBox" placeholder="Search for book">
-        <input type="button" name="loginButton" id="loginButton" value="Login" onclick="window.location.href='Login.html'">
-        
+        <h1>Library Management System</h1>
+        <ul class="links"> 
+            <li class="items">Popular</li>
+            <li class="items">Latests</li>
+            <li class="items">Books</li>
+        </ul>
+        <input type='text' id='searchBox' placeholder='Search for book'></input>
+        <ul class="login">
+            <li class="loginButton">Login</li>
+        </ul>
     </div>
-    <div class="banner">insert image here</div>
-    <div class="booksContainer">
-        <div class="popularBooks">popular books</div>
-        <div class="newBooks">new books</div>
+    <h1 class=CategoryLabel>Categories</h1>
+    <div class=Categories>
+        <img class=CategoryImage src='img/CategoryImages/BaE.png' alt='BusinessAndEcon'/>
+        <img class=CategoryImage src='img/CategoryImages/ESaT.png' alt='Education'/>
+        <img class=CategoryImage src='img/CategoryImages/LaF.png' alt='Literature'/>
+        <img class=CategoryImage src='img/CategoryImages/SNaM.png' alt='Science'/>
+        <img class=CategoryImage src='img/CategoryImages/HFaN.png' alt='Health'/>
+        <img class=CategoryImage src='img/CategoryImages/Law.png' alt='Law'/>
     </div>
-
+    <h1 class=PopularLabel>Popular</h1>
+    <div class=BooksAndArrows>
+        <img class=Arrows id=leftArrow src='img/leftarrow.png' alt="leftArrow" />
+        <ul class=BookContainerItems id="container" >
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=Title>title</div>
+                </div>
+            </li>
+        </ul>
+        <img class=Arrows id=rightArrow src='img/rightarrow.png' alt="rightArrow"/>
+    </div>
+    <h1 class=PopularLabel>Latest</h1>
+    <div class=BooksAndArrows>
+        <img class=Arrows id=leftArrow src='img/leftarrow.png' alt="leftArrow"/>
+        <ul class=BookContainerItems id="container">
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+        </ul>
+        <img class=Arrows id=rightArrow src='img/rightarrow.png' alt="rightArrow"/>
+    </div>
 </body>
-<footer>
-    <a href="">Contact Us</a> 
-</footer>
 </html>
