--- a/client/Signup.html
+++ b/client/Signup.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link rel="stylesheet" href="signupStyle.css">
-    <script src="Signup.js"></script> 
+    <script src="Signup.js"></script>
+
 <body>
     <form id="signupForm" onsubmit="return validateForm()">
         <div class="Register">
@@ -28,11 +30,13 @@
                 <input type="password" name="confPassword" id="confPassword" placeholder="Re-enter password" required>
             </div>
             <div class="buttons">
-                <input type="button" name="button" id="backButton" value="Back" onclick="window.location.href='Login.html'"></button>
+                <input type="button" name="button" id="backButton" value="Back"
+                    onclick="window.location.href='Login.html'"></button>
                 <input type="submit" name="button" id="signupButton" value="Sign Up"></button>
             </div>
 
         </div>
     </form>
 </body>
+
 </html>
