--- a/client/ForgotPassword.html
+++ b/client/ForgotPassword.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library Management System - Recover Password</title>
-    <link rel="stylesheet" href="forgotPassStyle.css">
+    <link rel="stylesheet" href="forgotPassword.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
 </head>
 
