changed home css

--- a/client/Home.html
+++ b/client/Home.html
@@ -32,7 +32,7 @@
     <h1 class=PopularLabel>Popular</h1>
     <div class=BooksAndArrows>
         <img class=Arrows id=leftArrow src='img/leftarrow.png' alt="leftArrow" />
-        <ul class=BookContainerItems id="container" >
+        <ul class=BookContainerItems id="containerPop" >
             <li key=Books.id class=BookContainerItem>
                 <div class=BookContainer >
                     <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
@@ -45,7 +45,49 @@
     <h1 class=PopularLabel>Latest</h1>
     <div class=BooksAndArrows>
         <img class=Arrows id=leftArrowLatest src='img/leftarrow.png' alt="leftArrow"/>
-        <ul class=BookContainerItems id="container">
+        <ul class=BookContainerItems id="containerLatest">
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
+            <li key=Books.id class=BookContainerItem>
+                <div class=BookContainer >
+                    <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
+                    <div class=styleTitle>title</div>
+                </div>
+            </li>
             <li key=Books.id class=BookContainerItem>
                 <div class=BookContainer >
                     <img class=Book src='img/BookCover/BookCover.jpg' alt='Book1'/>
@@ -55,11 +97,7 @@
         </ul>
         <img class=Arrows id=rightArrowLatest src='img/rightarrow.png' alt="rightArrow"/>
     </div>
+    <script src='Home.js'></script>
 </body>
-<script>
-    var leftArrowPop = document.getElementById('leftArrow');
-    var rightArrowPop = document.getElementById('rightArrow');
-    var leftArrowLat = document.getElementById('leftArrowLatest');
-    var rightArrowLat = document.getElementById('rightArrowLatest');
-</script>
+
 </html>
